@@ -4,7 +4,6 @@ AUX lm_sensors-3.1.1-sensors-detect-gentoo.patch 4398 RMD160 5ba45089ad7d121b35d
 AUX sensord-conf.d 104 RMD160 c4a06a8492d6c0fd966dea64d92f798a9b716a92 SHA1 43090c58c918969caa359d3b6e89237585759f46 SHA256 02230edf5efbb0a4de3840cd76f9ebf431c57a246fa7388e9dbeb0fe26fe7b8d
 AUX sensord-init.d 708 RMD160 31e5a4ac844333bc9689346bb68c206ded13f1a3 SHA1 45dd30ba6d158022e8290ea9b09fd2a1053c5b58 SHA256 9f6d0e7bcdc1b4b3bc0835b40f246f7caf76e1b3bbfcf76a5d5b235eb8243d89
 DIST lm_sensors-3.1.1.tar.bz2 154551 RMD160 7a333f42f598ee8366f70157037c63ebb5b33387 SHA1 8be15806d229305491f11b77c67496074480faf4 SHA256 d95a3f2a6526f4da2ae145b7bbf45d16f0fb17bfe0d2017c7e02964199d059ef
-EBUILD lm_sensors-3.1.1-r1.ebuild 2865 RMD160 c92b7c36c47219005ddadf3847a2af12e150612e SHA1 a623b966c63f9ae633f60e0db4b63b8a0ca2f372 SHA256 b4dd83aa931ae1227df7ba25b623895f7d9bd21462b2facb6c89d6b302314267
-EBUILD lm_sensors-3.1.1.ebuild 3066 RMD160 0ec9c1b945569ba2e517ab42bcfc97b85afc6eab SHA1 a543107eb74b8bf39a54002e81795c6fea13772c SHA256 834cb0b4619328ef9470d5f543c9965cc1ac80d2f5cb57e7b017cbc22da0cd95
-MISC ChangeLog 818 RMD160 53aa9ea62a9d5d8e9e69389085afc0c7f1070ec0 SHA1 67f6612762215ad92d45d93362117aead07267bc SHA256 f18fc83d5524caa07c01de43ac14dcbd2a7b06e76bc646825b84e47593b2a420
+EBUILD lm_sensors-3.1.1.ebuild 3087 RMD160 20a064d211053df31262744abd65d47b485f1b01 SHA1 245f25cd63fd9fa0d27ed925c6d8671247da94c7 SHA256 7e9f6a63b0a098ccd64c23a7a9a63a77e9d1a372d8c4a68f5994d78c010ccdd1
+MISC ChangeLog 951 RMD160 1a924d409f5a9798ad2c57d6cbd987003be0bb8d SHA1 2f405bc5b3a0d47b2e58dfc00f846d1fc599f46d SHA256 ea03f22e5a31aa0919242e93d21ab559fdc171e6ec787044fb687de0a73ac16f
 MISC metadata.xml 328 RMD160 102d79ccb2dfd783b5d5baf50f5ac633d915f712 SHA1 b19178b1ba16d245cd04ea70c9532ee8dc37097c SHA256 aa83681ad6865347f45c3911d408b253ab27e43bf0e3f0e58624a2b4958b425b
